--- a/.env_sample
+++ b/.env_sample
@@ -1,9 +1,9 @@
 SERVER_ADDRESS=:8080
 RUN_ADDRESS=http://localhost:8080
 SECRET_KEY=SECRET_KEY
-DATABASE_DSN=postgres://admin:password@localhost:5432/shortener_db
-#DATABASE_URI=postgres://admin:password@postgresql:5432/shortener_db
+DATABASE_DSN=postgres://admin:password@localhost:5432/gophermart
+#DATABASE_URI=postgres://admin:password@postgresql:5432/gophermart
 POSTGRESQL_USERNAME=admin
-POSTGRESQL_DATABASE=shortener_db
+POSTGRESQL_DATABASE=gophermart
 POSTGRESQL_PASSWORD=password
 ACCRUAL_SYSTEM_ADDRESS="pass"
