--- a/config/config.yml
+++ b/config/config.yml
@@ -11,7 +11,7 @@ logger:
 
 postgres:
   pool_max: 2
-  pg_url: 'postgres://admin:password@localhost:5432/gophermart'
+  pg_url: 'postgres://admin:password@localhost:5432/gophermart?sslmode=disable'
 
 security:
 # only for debug
