--- a/.env_sample
+++ b/.env_sample
@@ -1,5 +1,4 @@
-SERVER_ADDRESS=:8080
-RUN_ADDRESS=http://localhost:8080
+RUN_ADDRESS=localhost:8080
 SECRET_KEY=SECRET_KEY
 DATABASE_DSN=postgres://admin:password@localhost:5432/gophermart
 #DATABASE_URI=postgres://admin:password@postgresql:5432/gophermart
